# arctic

./: CMakeLists.txt  README.md
Client/: CMakeLists.txt  Client.cpp  Client.h  main.cpp
config/: config.json
res/: qml.qrc
res/qml/: HelloScreen.qml  PrimeScreen.qml  PrimeScreenForm.ui.qml  RadioLabel.qml  RadioLabelForm.ui.qml  ShackButton.qml  ShackPlan.qml  ShackPlanForm.ui.qml  SideBar.qml  SideBarForm.ui.qml  VisibleSensors.qml  VisibleSensorsForm.ui.qml  main.qml
src/: CMakeLists.txt  camera.cpp  camera.h  main.cpp  server.cpp  server.h  staters.cpp  staters.h  udpreciever.cpp  udpreciever.h
src/modules/jsonconf/: CMakeLists.txt  README.md  jsonconf.cpp  jsonconf.h  jsonconf.pri
src/modules/jsonconf/src/: CMakeLists.txt  jsonconf.cpp  jsonconf.h
src/modules/jsonconf/tests/: CMakeLists.txt  config.json  controlList  main.cpp
src/modules/jsonconf/tools/: check.py  runScriptTest.sh
test/: CMakeLists.txt
test/serverTest/: CMakeLists.txt  test.cpp
test/statersTest/: CMakeLists.txt  test.cpp
